# whisper-vox

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PRD.md  README.md  whisper-vox.service
config/: default.yaml
memory/: MEMORY.md  session-2026-04-09.md
src/: agreement.rs  audio.rs  config.rs  daemon.rs  injector.rs  main.rs  sentence.rs  transcriber.rs  util.rs  vad.rs
