[package]
name = "whisper-vox"
version = "0.1.0"
edition = "2021"
description = "Always-listening voice daemon for Claude Code"

[[bin]]
name = "wv"
path = "src/main.rs"

[dependencies]
# Audio capture
cpal = "0.15"

# Speech-to-text
whisper-rs = "0.12"

# VAD (Silero via ONNX)
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
ndarray = "0.17"

# Async runtime + IPC
tokio = { version = "1", features = ["full"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking"] }
which = "7"
